--- a/WanderLost/WanderLost/Client/Pages/NotificationsHelp.razor.css
+++ b/WanderLost/WanderLost/Client/Pages/NotificationsHelp.razor.css
@@ -1,5 +1,4 @@
-﻿
-.imgbox {
+﻿.imgbox {
     display: grid;
     height: 100%;
 }
